@@ -52,8 +52,8 @@
         <artifactId>maven-compiler-plugin</artifactId>
         <version>3.11.0</version>
         <configuration>
-          <source>1.8</source>
-          <target>1.8</target>
+          <source>8</source>
+          <target>8</target><compilerArgs>--enable-preview</compilerArgs>
         </configuration>
       </plugin>
     </plugins>
